@@ -9,7 +9,11 @@ _setupw:
 	mov	cx,ds
 	pop	dx
 	pop	bx
+#ifndef CONFIG_286PMODE
 	mov	ax,#DEF_INITSEG
+#else
+	mov	ax,#0x0048
+#endif
 	mov	ds,ax
 	sub	sp,*2
 	mov	ax,[bx]
